Fix z-index of modal overlay

--- a/ui/src/components/common/ModalWrapper/Modal.scss
+++ b/ui/src/components/common/ModalWrapper/Modal.scss
@@ -5,6 +5,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.75);
+  z-index: 10;
 }
 
 .ReactModal__Content__LoginRegister {
